tests/should_succeed/foo/bar.jou
# This file is meant to be imported, not ran directly.

from "stdlib/io.jou" import puts

def bar() -> void:
    puts("Bar Bar")
