tests/syntax_error/python_cast_uint64.jou
def blah() -> None:
    x = uint64("123")  # Error: uint64 is not a function, use 'as uint64' to convert between numbers or e.g. atoll() from "stdlib/str.jou" to convert a string to int64
